Image Optimized and sent to CDN

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/yuvraj.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894623/xenith-23/yuvraj_gtgyks.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Yuvraj Chaudhary</h1>
@@ -536,7 +536,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/parth.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894562/xenith-23/parth_li5osh.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Parth Punia</h1>
@@ -549,7 +549,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/vinay.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894532/xenith-23/vinay_alzn4m.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Vinay Baliyan</h1>
@@ -562,7 +562,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile " style="background-image: url(./static/img/team/ananya.jpg)"></div>
+              <div class="profile " style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894557/xenith-23/ananya_lodcgd.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Ananya Garg</h1>
@@ -575,7 +575,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/avni.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894548/xenith-23/avni_n3e8rt.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Avni Arora</h1>
@@ -588,7 +588,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/sanskar.jpeg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894526/xenith-23/sanskar_sjoyeu.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Sanskar Dubey</h1>
@@ -601,7 +601,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/mitul.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894557/xenith-23/mitul_htq67p.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Mitul Jain</h1>
@@ -614,7 +614,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/kshiti.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894545/xenith-23/kshiti_riut9i.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Kshiti Srivastava</h1>
@@ -627,7 +627,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/rahul.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894564/xenith-23/rahul_ol19tv.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Rahul Raina</h1>
@@ -640,7 +640,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/nandini.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894561/xenith-23/nandini_mc06kr.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Nandini Agarwal</h1>
@@ -653,7 +653,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/rhythm.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894532/xenith-23/rhythm_vzwbq2.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Rhythm Shandlya</h1>
@@ -666,7 +666,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/abhiram.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894614/xenith-23/abhiram_dmfoxx.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">B.S.N Abhiram</h1>
@@ -679,7 +679,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/nikita.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894566/xenith-23/nikita_lutwze.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Nikita Singhal</h1>
@@ -692,7 +692,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/bhavey.png)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894609/xenith-23/bhavey_agylib.png')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Bhavey Mittal</h1>
@@ -705,7 +705,7 @@
           <div class="cont">
             <div class="profile_container">
               <div class="back"></div>
-              <div class="profile" style="background-image: url(./static/img/team/ishanya.jpg)"></div>
+              <div class="profile" style="background-image: url('https://res.cloudinary.com/dm0muijpa/image/upload/v1674894554/xenith-23/ishanya_tv2ulk.jpg')"></div>
             </div>
             <div class="profile_infos">
               <h1 class="name">Ishanya Yadav</h1>
