--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
           </div>
 
         </div>
-        <video autoplay muted loop id="myVideo" style="width:100vw;height:100vh;object-fit:fill;">
+        <img src="./static/img/bk2.jpg" style="width:100vw;height:50vh;object-fit:fill;" alt="" srcset="">
+        <!-- <video autoplay muted loop id="myVideo" style="width:100vw;height:100vh;object-fit:fill;">
           <source src="./assets/octopus.mp4" type="video/mp4" class="active video123">
-        </video>
+        </video> -->
       </div>
       <div style="text-align: center; width: 100%" class="aboutcontent">
         <span class="sectionHead" id="aboutit" style="color: whitesmoke;">About</span>
@@ -785,7 +786,7 @@
           <div style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
-          <p style="display: flex">Yuvraj Chaudhary : +91 8755303468</p>
+          <p style="display: flex">Yuvraj Chaudhary : +91 8279723230</p>
         </div>
 
         <div class="nme">
