--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <div class="content12">
                 <h2>01</h2>
                 <h3>Event 1</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam, blandit at risus nec</p>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
             </div>
@@ -224,7 +224,7 @@
               <div class="content12">
                 <h2>02</h2>
                 <h3>Event 2</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam,blandit at risus nec,</p>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
             </div>
@@ -235,7 +235,7 @@
               <div class="content12">
                 <h2>03</h2>
                 <h3>Event 3</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam</p>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
 
@@ -244,9 +244,9 @@
           <div class="card">
             <div class="box">
               <div class="content12">
-                <h2>01</h2>
-                <h3>Event 1</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam, blandit at risus nec</p>
+                <h2>04</h2>
+                <h3>Event 4</h3>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
             </div>
@@ -255,9 +255,9 @@
           <div class="card">
             <div class="box">
               <div class="content12">
-                <h2>02</h2>
-                <h3>Event 2</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam,blandit at risus nec,</p>
+                <h2>05</h2>
+                <h3>Event 5</h3>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
             </div>
@@ -266,15 +266,13 @@
           <div class="card">
             <div class="box">
               <div class="content12">
-                <h2>03</h2>
-                <h3>Event 3</h3>
-                <p>Suspendisse ac mi at dolor sodal Curabitur diam quam</p>
+                <h2>06</h2>
+                <h3>Event 6</h3>
+                <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
-
             </div>
           </div>
-
         </div>
       </div>
 
@@ -372,13 +370,14 @@
 
         <div class="swiper-container" id="gallerybox">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="./static/img/gallery/img6.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img4.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img5.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img3.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img1.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img2.jpeg" alt=""></div>
-            <div class="swiper-slide"><img src="./static/img/gallery/img7.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994437/xenith-23-gallery/0_hthxxt.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994440/xenith-23-gallery/1_rq0ljc.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994438/xenith-23-gallery/3_kfwifh.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994435/xenith-23-gallery/4_aroynl.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/6_ylnful.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994429/xenith-23-gallery/2_m57f4z.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994441/xenith-23-gallery/10_nlwrv0.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/9_d5ymok.heic" alt=""></div>
           </div>
           <!-- <div class="swiper-pagination"></div> -->
           <div class="swiper-button-next"></div>
