Gallery Updated (with Extensions)

--- a/index.html
+++ b/index.html
@@ -371,14 +371,14 @@
 
         <div class="swiper-container" id="gallerybox">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994437/xenith-23-gallery/0_hthxxt.heic" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994440/xenith-23-gallery/1_rq0ljc.heic" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994438/xenith-23-gallery/3_kfwifh.heic" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994435/xenith-23-gallery/4_aroynl.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994437/xenith-23-gallery/0_hthxxt.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994440/xenith-23-gallery/1_rq0ljc.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994438/xenith-23-gallery/3_kfwifh.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994435/xenith-23-gallery/4_aroynl.jpg" alt=""></div>
             <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/6_ylnful.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994429/xenith-23-gallery/2_m57f4z.heic" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994441/xenith-23-gallery/10_nlwrv0.heic" alt=""></div>
-            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/9_d5ymok.heic" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994429/xenith-23-gallery/2_m57f4z.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994441/xenith-23-gallery/10_nlwrv0.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/9_d5ymok.jpg" alt=""></div>
           </div>
           <!-- <div class="swiper-pagination"></div> -->
           <div class="swiper-button-next"></div>
