Timeline Format Changes #1

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
             <div class="time">
               <h2>Time</h2>
-              <span>17:00 - 19:00</span>
+              <span>17:00 <br/> to <br/> 19:00</span>
             </div>
           </div>
         </li>
@@ -322,7 +322,7 @@
             </div>
             <div class="time">
               <h2>Time</h2>
-              <span>11:00 - 13:00</span>
+              <span>11:00<br/> to <br/>13:00</span>
             </div>
           </div>
         </li>
@@ -336,7 +336,7 @@
             </div>
             <div class="time">
               <h2>Time</h2>
-              <span>14:00 - 16:00</span>
+              <span>14:00<br/> to <br/>16:00</span>
             </div>
           </div>
         </li>
@@ -350,7 +350,7 @@
             </div>
             <div class="time">
               <h2>Time</h2>
-              <span>16:00 - 19:00</span>
+              <span>16:00<br/> to <br/>19:00</span>
             </div>
           </div>
         </li>
