--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <div class="event-final">
         <div class="containerevent">
           <div class="card">
-            <div class="box">
+            <div class="box box1">
               <div class="content12">
                 <h2>01</h2>
                 <h3>Event 1</h3>
@@ -221,7 +221,7 @@
           </div>
 
           <div class="card">
-            <div class="box">
+            <div class="box box2">
               <div class="content12">
                 <h2>02</h2>
                 <h3>Event 2</h3>
@@ -232,7 +232,7 @@
           </div>
 
           <div class="card">
-            <div class="box">
+            <div class="box box3">
               <div class="content12">
                 <h2>03</h2>
                 <h3>Event 3</h3>
@@ -243,7 +243,7 @@
             </div>
           </div>
           <div class="card">
-            <div class="box">
+            <div class="box box4">
               <div class="content12">
                 <h2>04</h2>
                 <h3>Event 4</h3>
@@ -254,7 +254,7 @@
           </div>
 
           <div class="card">
-            <div class="box">
+            <div class="box box5">
               <div class="content12">
                 <h2>05</h2>
                 <h3>Event 5</h3>
@@ -265,7 +265,7 @@
           </div>
 
           <div class="card">
-            <div class="box">
+            <div class="box box6">
               <div class="content12">
                 <h2>06</h2>
                 <h3>Event 6</h3>
