Sponsors Modified, and timeline changes

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
         <li>
           <div>
-            <h4><b><time>Runtime Terror</time></b></h4>
+            <h4><b><time>Runtime Terror &amp; Hackathin Begins</time></b></h4>
             <div class="date">
               <h2>Date</h2>
               <span>4<sup>th</sup> Feb 2023</span>
