Hackathon Timeline Card Added

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
         <li>
           <div>
-            <h4><b><time>Runtime Terror &amp; Hackathin Begins</time></b></h4>
+            <h4><b><time>Runtime Terror</time></b></h4>
             <div class="date">
               <h2>Date</h2>
               <span>4<sup>th</sup> Feb 2023</span>
@@ -309,6 +309,20 @@
             <div class="time">
               <h2>Time</h2>
               <span>17:00 <br/> to <br/> 19:00</span>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div>
+            <h4><b><time>Hackathon Begins</time></b></h4>
+            <div class="date">
+              <h2>Date</h2>
+              <span>4<sup>th</sup> Feb 2023</span>
+            </div>
+            <div class="time">
+              <h2>Time</h2>
+              <span>17:00</span>
             </div>
           </div>
         </li>
