--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@
             <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994429/xenith-23-gallery/2_m57f4z.jpg" alt=""></div>
             <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994441/xenith-23-gallery/10_nlwrv0.jpg" alt=""></div>
             <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1674994436/xenith-23-gallery/9_d5ymok.jpg" alt=""></div>
+            
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1675077569/xenith-23-gallery/IMG_20190110_212014_ntt1zz.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1675077593/xenith-23-gallery/IMG_20190109_133305_gomlls.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="https://res.cloudinary.com/dm0muijpa/image/upload/v1675077634/xenith-23-gallery/IMG_20190109_174648_xz9qaq.jpg" alt=""></div>
           </div>
           <!-- <div class="swiper-pagination"></div> -->
           <div class="swiper-button-next"></div>
