Timeline Text Overflow Fix

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
         <li>
           <div>
-            <h4><b><time>Hackathon Begins</time></b></h4>
+            <h4><b><time>Hackathon Start</time></b></h4>
             <div class="date">
               <h2>Date</h2>
               <span>4<sup>th</sup> Feb 2023</span>
