spacing and other fixes

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           <span class="sectionHead">Organising team</span>
         </div>
       </div>
-      <main style="margin-bottom:20vh ;">
+      <main >
 
 
         <div class="col-4">
