Event Cards Fixed

--- a/index.html
+++ b/index.html
@@ -239,7 +239,39 @@
                 <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
+            </div>
+          </div>
 
+          <div class="card">
+            <div class="box box4">
+              <div class="content12">
+                <h2>04</h2>
+                <h3>Event 4</h3>
+                <p>Coming Soon...</p>
+                <a href="#">Register</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box box5">
+              <div class="content12">
+                <h2>05</h2>
+                <h3>Event 5</h3>
+                <p>Coming Soon...</p>
+                <a href="#">Register</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box box6">
+              <div class="content12">
+                <h2>06</h2>
+                <h3>Event 6</h3>
+                <p>Coming Soon...</p>
+                <a href="#">Register</a>
+              </div>
             </div>
           </div>
         </div>
