--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="box box4">
               <div class="content12">
                 <h2>04</h2>
@@ -273,7 +273,7 @@
                 <a href="#">Register</a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
