hackstreet event added

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             <div class="box box1">
               <div class="content12">
                 <h2>01</h2>
-                <h3>Event 1</h3>
-                <p>Coming Soon...</p>
-                <a href="#">Register</a>
+                <h3>Hackstreet</h3>
+                <p>Online Hackathon</p>
+                <a href="https://hackstreet23.vercel.app/" target="_blank">Register</a>
               </div>
             </div>
           </div>
