--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
             <div class="box box2">
               <div class="content12">
                 <h2>02</h2>
-                <h3>Event 2</h3>
-                <p>Coming Soon...</p>
-                <a href="#">Register</a>
+                <h3>Runtime Terror</h3>
+                <p>Coding Contest</p>
+                <a href="https://bit.ly/3jiQt9R" target="_blank">Register</a>
               </div>
             </div>
           </div>
@@ -235,20 +235,20 @@
             <div class="box box3">
               <div class="content12">
                 <h2>03</h2>
-                <h3>Event 3</h3>
-                <p>Coming Soon...</p>
+                <h3>Tech Talk</h3>
+                <p>Striver</p>
                 <a href="#">Register</a>
               </div>
             </div>
           </div>
 
-          <!-- <div class="card">
+          <div class="card">
             <div class="box box4">
               <div class="content12">
                 <h2>04</h2>
-                <h3>Event 4</h3>
-                <p>Coming Soon...</p>
-                <a href="#">Register</a>
+                <h3>Trident Arc</h3>
+                <p>Quiz</p>
+                <a href="https://bit.ly/3RhaA50" target="_blank">Register</a>
               </div>
             </div>
           </div>
@@ -257,9 +257,9 @@
             <div class="box box5">
               <div class="content12">
                 <h2>05</h2>
-                <h3>Event 5</h3>
-                <p>Coming Soon...</p>
-                <a href="#">Register</a>
+                <h3>Tech Talk 2.0</h3>
+                <p>Utkarsh Gupta</p>
+                <a href="https://bit.ly/3WHj32l" target="_blank">Register</a>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
                 <a href="#">Register</a>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
 
