Treasure Trail Event Image Added

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="box box6">
               <div class="content12">
                 <h2>06</h2>
-                <h3>Event 6</h3>
+                <h3>Treasure Trail</h3>
                 <p>Coming Soon...</p>
                 <a href="#">Register</a>
               </div>
