form links updated

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <h2>03</h2>
                 <h3>Tech Talk</h3>
                 <p>Striver</p>
-                <a href="#">Register</a>
+                <a href="https://bit.ly/3XQWlq1">Register</a>
               </div>
             </div>
           </div>
@@ -269,8 +269,7 @@
               <div class="content12">
                 <h2>06</h2>
                 <h3>Treasure Trail</h3>
-                <p>Coming Soon...</p>
-                <a href="#">Register</a>
+                <a href="https://bit.ly/3HT4xk7">Register</a>
               </div>
             </div>
           </div>
