--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!--About section begins-->
 
     <div id="about" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
-      <div class="octopus">
+      <!--<div class="octopus">
         <div class="coner">
 
           <div id="countdown">
@@ -163,10 +163,7 @@
 
         </div>
         <img src="./static/img/bk2.jpg" style="width:100vw;height:50vh;object-fit:fill;" alt="" srcset="">
-        <!-- <video autoplay muted loop id="myVideo" style="width:100vw;height:100vh;object-fit:fill;">
-          <source src="./assets/octopus.mp4" type="video/mp4" class="active video123">
-        </video> -->
-      </div>
+        /div>-->
       <div style="text-align: center; width: 100%" class="aboutcontent">
         <span class="sectionHead" id="aboutit" style="color: whitesmoke;">About</span>
         <div class="about-container">
